Fixes log-in logo being stretched on Safari

--- a/Plan/common/src/main/resources/assets/plan/web/css/sb-admin-2.css
+++ b/Plan/common/src/main/resources/assets/plan/web/css/sb-admin-2.css
@@ -199,7 +199,6 @@ figure {
 }
 
 img {
-    height: auto;
     vertical-align: middle;
     border-style: none;
 }
