--- a/Plan/common/src/main/resources/assets/plan/web/css/style.css
+++ b/Plan/common/src/main/resources/assets/plan/web/css/style.css
@@ -28,6 +28,7 @@
 
 .w-15 {
     width: 15% !important;
+    height: 50%;
 }
 
 .w-22 {
